[gd_scene load_steps=24 format=3 uid="uid://ctqw23nwrtrnv"]

[ext_resource type="Script" path="res://scripts/world_select.gd" id="1_mhxpq"]
[ext_resource type="PackedScene" uid="uid://b7xv5el5incc" path="res://scenes/world_select/world_icon.tscn" id="1_mu24f"]
[ext_resource type="PackedScene" uid="uid://cob5gwbx56hw7" path="res://scenes/swipe_controller.tscn" id="2_24s5x"]
[ext_resource type="Shader" path="res://shaders/scroll.gdshader" id="2_y3pn4"]
[ext_resource type="Texture2D" uid="uid://bkx3sw1x0v1sd" path="res://assets/sprites/tile_0025.png" id="3_p5nym"]
[ext_resource type="PackedScene" uid="uid://n7q5qetop3kt" path="res://scenes/world_select/level_select_2.tscn" id="4_8tes3"]
[ext_resource type="Texture2D" uid="uid://cajbwcjoy46i" path="res://assets/sprites/knight.png" id="5_ifq1d"]
[ext_resource type="Texture2D" uid="uid://b5kf5ab8k8h8p" path="res://assets/sprites/pattern/tile_0026.png" id="6_q3lx5"]
[ext_resource type="Shader" path="res://shaders/highlight1.gdshader" id="6_syl8g"]
[ext_resource type="Shader" path="res://shaders/highlightHard.gdshader" id="6_wg7xj"]
[ext_resource type="Script" path="res://scripts/animated_texture_rect.gd" id="6_xqe6l"]
[ext_resource type="FontFile" uid="uid://durllno7hjbwe" path="res://assets/fonts/Adventurer.ttf" id="10_fcuq3"]
[ext_resource type="Texture2D" uid="uid://jd50uvl6nl7m" path="res://assets/sprites/switch_left.png" id="12_cm8i0"]
[ext_resource type="AudioStream" uid="uid://27werrxboiwp" path="res://assets/sounds/explosion_shock_down.wav" id="14_4hy1n"]
[ext_resource type="AudioStream" uid="uid://c8hda063dub54" path="res://assets/sounds/move.wav" id="15_idask"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_i8w2p"]
shader = ExtResource("6_wg7xj")
shader_parameter/highlight_color = Color(1, 1, 1, 1)
shader_parameter/frequency = 0.35
shader_parameter/highlight_speed = 6.0
shader_parameter/highlight_width = 15.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_x4roj"]
shader = ExtResource("2_y3pn4")
shader_parameter/speed = 0.5

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mghw6"]
shader = ExtResource("6_syl8g")
shader_parameter/shine_color = Color(1, 1, 1, 0.25)
shader_parameter/line_width = 0.1
shader_parameter/angle = 0.785398
shader_parameter/speed = 1.0
shader_parameter/wait_cycles = 1.5
shader_parameter/height = 10.0
shader_parameter/frequency = 0.35
shader_parameter/speed_wavy = 3.0

[sub_resource type="AtlasTexture" id="AtlasTexture_w6hob"]
atlas = ExtResource("5_ifq1d")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_depus"]
atlas = ExtResource("5_ifq1d")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ltn7h"]
atlas = ExtResource("5_ifq1d")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rmyrl"]
atlas = ExtResource("5_ifq1d")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_vvkgv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w6hob")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_depus")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ltn7h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rmyrl")
}],
"loop": true,
"name": &"default",
"speed": 15.0
}]

[node name="WorldSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mhxpq")

[node name="SwipeController" parent="." instance=ExtResource("2_24s5x")]
layout_mode = 1

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.197845, 0.483589, 1)

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
grow_horizontal = 2

[node name="Pattern3" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -1.89368
offset_top = -384.0
offset_right = 498.106
offset_bottom = 116.0
grow_horizontal = 2
rotation = 0.785398
scale = Vector2(1.08076, 1.08076)
color = Color(0, 0, 0, 1)

[node name="Pattern2" type="ColorRect" parent="Control"]
material = SubResource("ShaderMaterial_i8w2p")
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -1.89368
offset_top = -384.0
offset_right = 498.106
offset_bottom = 116.0
grow_horizontal = 2
rotation = 0.785398
scale = Vector2(1.06451, 1.06451)
color = Color(0.910468, 0.836782, 0, 1)

[node name="Pattern4" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -1.89368
offset_top = -384.0
offset_right = 498.106
offset_bottom = 116.0
grow_horizontal = 2
rotation = 0.785398
scale = Vector2(1.01423, 1.01423)
color = Color(0, 0, 0, 1)

[node name="Pattern" type="TextureRect" parent="Control"]
self_modulate = Color(0.580549, 0.00099621, 0.705967, 1)
material = SubResource("ShaderMaterial_x4roj")
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -1.89368
offset_top = -384.0
offset_right = 498.106
offset_bottom = 116.0
grow_horizontal = 2
rotation = 0.785398
texture = ExtResource("3_p5nym")
stretch_mode = 1

[node name="Label3" type="RichTextLabel" parent="."]
material = SubResource("ShaderMaterial_mghw6")
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -431.0
offset_top = 80.0
offset_right = 431.0
offset_bottom = 180.0
grow_horizontal = 2
theme_override_colors/default_color = Color(0.870588, 0, 0.537255, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.882402, 0.575904, 1.15514e-06, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/shadow_outline_size = 20
theme_override_constants/outline_size = 8
theme_override_fonts/normal_font = ExtResource("10_fcuq3")
theme_override_fonts/bold_font = ExtResource("10_fcuq3")
theme_override_fonts/italics_font = ExtResource("10_fcuq3")
theme_override_fonts/bold_italics_font = ExtResource("10_fcuq3")
theme_override_fonts/mono_font = ExtResource("10_fcuq3")
theme_override_font_sizes/normal_font_size = 100
theme_override_font_sizes/bold_font_size = 100
theme_override_font_sizes/italics_font_size = 100
theme_override_font_sizes/bold_italics_font_size = 100
theme_override_font_sizes/mono_font_size = 100
bbcode_enabled = true
text = "[center][wave amp=2 freq=10
]World Selection[/wave][/center]"

[node name="WorldMap" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -324.0
offset_right = -576.0
offset_bottom = -324.0
grow_horizontal = 2
grow_vertical = 2

[node name="Line1" type="Line2D" parent="WorldMap"]
position = Vector2(136, 54)
scale = Vector2(0.603774, 0.869565)
points = PackedVector2Array(0, 471.5, 344.5, 388.7)
width = 40.0
default_color = Color(0.919874, 0.761171, 0, 1)
texture = ExtResource("6_q3lx5")
texture_mode = 1
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="Line2" type="Line2D" parent="WorldMap"]
position = Vector2(136, 54)
scale = Vector2(0.603774, 0.869565)
points = PackedVector2Array(662.5, 471.5, 344.5, 388.7)
width = 40.0
default_color = Color(0.919874, 0.761171, 0, 1)
texture = ExtResource("6_q3lx5")
texture_mode = 1
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="Line3" type="Line2D" parent="WorldMap"]
position = Vector2(136, 54)
scale = Vector2(0.603774, 0.869565)
points = PackedVector2Array(662.5, 471.5, 1113, 324.3)
width = 40.0
default_color = Color(0.919874, 0.761171, 0, 1)
texture = ExtResource("6_q3lx5")
texture_mode = 1
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="Line4" type="Line2D" parent="WorldMap"]
position = Vector2(136, 54)
scale = Vector2(0.603774, 0.869565)
points = PackedVector2Array(1470.75, 462.3, 1113, 324.3)
width = 40.0
default_color = Color(0.919874, 0.761171, 0, 1)
texture = ExtResource("6_q3lx5")
texture_mode = 1
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="1" parent="WorldMap" instance=ExtResource("1_mu24f")]
offset_left = 108.0
offset_top = 433.0
offset_right = 172.0
offset_bottom = 497.0

[node name="2" parent="WorldMap" instance=ExtResource("1_mu24f")]
offset_left = 307.0
offset_top = 362.0
offset_right = 371.0
offset_bottom = 426.0
world_index = 2
level_select_packed = ExtResource("4_8tes3")

[node name="3" parent="WorldMap" instance=ExtResource("1_mu24f")]
offset_left = 506.0
offset_top = 430.0
offset_right = 570.0
offset_bottom = 494.0
world_index = 3

[node name="4" parent="WorldMap" instance=ExtResource("1_mu24f")]
offset_left = 773.0
offset_top = 307.0
offset_right = 837.0
offset_bottom = 371.0
world_index = 4

[node name="5" parent="WorldMap" instance=ExtResource("1_mu24f")]
offset_left = 990.0
offset_top = 423.0
offset_right = 1054.0
offset_bottom = 487.0
world_index = 5

[node name="TextureButton" type="TouchScreenButton" parent="."]
position = Vector2(32, 32)
texture_normal = ExtResource("12_cm8i0")
action = "dash"
visibility_mode = 1

[node name="PlayerIcon" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
scale = Vector2(2, 2)
pivot_offset = Vector2(32, 32)
mouse_filter = 2
texture = SubResource("AtlasTexture_w6hob")
expand_mode = 2
script = ExtResource("6_xqe6l")
sprites = SubResource("SpriteFrames_vvkgv")
autoplay = true
Animation = "default"
Frame = 0
"Speed Scale" = 1.0

[node name="SoundValid" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_4hy1n")
bus = &"SFX"

[node name="MovingToLevelSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("15_idask")
bus = &"SFX"

[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
